--- a/base/molecule/default/molecule.yml
+++ b/base/molecule/default/molecule.yml
@@ -7,7 +7,7 @@ lint:
   name: yamllint
 platforms:
   - name: instance
-    image: debian:jessie
+    image: debian:stretch
 provisioner:
   name: ansible
   lint:
